# basicServer

./: Dockerfile  pyproject.toml
scripts/: autocommit.sh  docker-build.sh  start.sh
src/: app.py  auth.py  schemas.py  settings.py
src/handlers/: errors.py
src/routes/: bingo.py  glances.py  login.py  main.py  users.py
static/: scripts.js  style.css
templates/: 404.html  bingo.html  glances.html  job.html  logged.html  login.html  status_code_template.html
tests/: test_app.py
